--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2"
   }
