--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   "bugs": {
     "url": "https://github.com/youssefA9/Ecommerce-Web-Application/issues"
   },
+  "nodemonConfig": {
+    "ignore": [
+      "*.json"
+    ]
+  },
   "homepage": "https://github.com/youssefA9/Ecommerce-Web-Application#readme",
   "devDependencies": {
     "nodemon": "^2.0.20"
@@ -23,6 +28,7 @@
   "dependencies": {
     "animejs": "^3.2.1",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jQuery": "^1.7.4"
   }
 }
